# cartControlRos

./: README.md  README.txt  add.sh
client/: CMakeLists.txt  vel.cc
plugin/: CMakeLists.txt  client.cc  main.cc  rossubscriber.cpp  rossubscriber.h  rossubsrcriber.cpp  rossubsrcriber.h
plugin/cfg/: PIDconf.cfg
plugin/client/: CMakeLists.txt  cartcontrollerwidget.cpp  cartcontrollerwidget.h  cartkinematic.cpp  cartkinematic.h  cartpathabstract.cpp  cartpathabstract.h  cartpathgetter.cpp  cartpathgetter.h  cartpathsetter.cpp  cartpathsetter.h  commonheader.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rospublisher.cpp  rospublisher.h  rossubscriber.cpp  rossubscriber.h  rossubsriber.cpp  rossubsriber.h
plugin/kinematic/: cartkinematic.cpp  cartkinematic.h  matrixproc.h
plugin/msg/: Position.msg  VelocityWheels.msg
plugin/srv/: PathSrv.srv
